Update 'go-wxoremsc' component image to: quay.io/rhtap_qe/go-wxoremsc:63f1a5926e17d54a5d46895b31422f1254670a95@sha256:92a4de97a47c6a6f17dd82c20052d03da04017c2001415aa321eb17997a70277

--- a/components/go-wxoremsc/overlays/development/deployment-patch.yaml
+++ b/components/go-wxoremsc/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-wxoremsc
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-wxoremsc:63f1a5926e17d54a5d46895b31422f1254670a95@sha256:92a4de97a47c6a6f17dd82c20052d03da04017c2001415aa321eb17997a70277
+          name: container-image
